Refactor (#1454)
* Refactor

This update includes general refactoring, like:
- converting to local variables
- removal of empty methods
- removal of redundant throws
- making eligible classes static
- removal of identical override methods
- upgrade to enhanced switch
- update to text block
- using pattern variables
- using records
- using collection factory calls

* Update SessionMixIT

* Update UnmanagedTransactionIT

* Removed redundant FailingConnectionDriverFactory

* Delete redundant ThrowingConsumer

* Update examples